--- a/package.json
+++ b/package.json
@@ -19,8 +19,17 @@
   },
   "homepage": "https://github.com/Borja-Leonardo-CRM/Inventory-it#readme",
   "dependencies": {
+    "bcrypt": "^3.0.8",
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "hbs": "^4.1.0",
-    "nodemon": "^2.0.2"
+    "mongoose": "^5.9.1",
+    "morgan": "^1.9.1",
+    "node-sass-middleware": "^0.11.0",
+    "nodemon": "^2.0.2",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   }
 }
