--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Borja-Leonardo-CRM/Inventory-it#readme",
   "dependencies": {
+    "axios": "^0.19.2",
     "bcrypt": "^3.0.8",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
