--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-session": "^1.17.0",
     "hbs": "^4.1.0",
     "js": "^0.1.0",
+    "locus": "^2.0.4",
     "mongoose": "^5.9.1",
     "morgan": "^1.9.1",
     "node-sass-middleware": "^0.11.0",
