--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=3000
 
-DBURL='mongodb://localhost/invetory-db'
+DBURL="mongodb+srv://usuarioDB:qXDg2A4EyZ06Qvwf@cluster0-dqc0p.mongodb.net/invetory?retryWrites=true&w=majority"
+
