--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=3000
 
-DBURL="mongodb+srv://usuarioDB:qXDg2A4EyZ06Qvwf@cluster0-dqc0p.mongodb.net/invetory?retryWrites=true&w=majority"
+DBURL=mongodb+srv://usuarioDB:qXDg2A4EyZ06Qvwf@cluster0-dqc0p.mongodb.net/invetory?retryWrites=true&w=majority
 
